# locque

./: .gitignore  AGENTS.md  CLAUDE.md  COMPLETE.md  COMPLETED.md  CONTRIBUTING.md  EVALUATION.md  README.md  Smythfile.lq  TODO.md  examples.md  grammar.md  open_questions.md  overview.md  philosophy.md  plan.md  vision.md
.github/workflows/: ci.yml
compiler/: locque-compiler.cabal
compiler/src/: LocqueRuntime.hs
compiler/src/Locque/Compiler/: Codegen.hs  Convert.hs  Core.hs  CoreErased.hs  CoreErasedPretty.hs  CoreParse.hs  CorePretty.hs  Emit.hs  Erase.hs
compiler/test/: Spec.hs
examples/: 00_hello_world.lq  00_hello_world.lqs
interpreter/: .hlint.yaml  cabal.project  locque-interpreter.cabal
interpreter/src/: AST.hs  ASTUtils.hs  CompilerLower.hs  CompilerPipeline.hs  CtorArity.hs  DictPass.hs  ErrorMsg.hs  Eval.hs  ImportResolver.hi  ImportResolver.hs  LocqueCompiler.hs  LocqueLsp.hs  Main.hs  Parser.hs  ProjectChecks.hs  Recursor.hs  RunCache.hs  Smyth.hs  SmythBench.hs  SmythCompile.hs  SmythCompileTest.hs  SmythConfig.hs  SmythCount.hs  SmythDependencies.hs  SmythDump.hs  SmythEmit.hs  SmythFormat.hs  SmythNew.hs  SmythRun.hs  SmythTest.hs  SourceLoc.hs  StripTyped.hs  Type.hs  TypeChecker.hs  Utils.hi  Utils.hs  Validator.hs
interpreter/src/Locque/: Runtime.hs
interpreter/test/: CompilerGolden.hs
lib/: Arithmetic.lq  Arithmetic.lqs  Assert.lq  Assert.lqs  Comparison.lq  Comparison.lqs  IO.lq  IO.lqs  List.lq  List.lqs  Prelude.lq  Prelude.lqs  Shell.lq  String.lq  String.lqs  TestImport.lq  TestImport.lqs  arithmetic.lq  assert.lq  assert.lqs  cli.lq  comparison.lq  control.lq  dictionary.lq  effects.lq  either.lq  file.lq  fs.lq  io.lq  list.lq  list.lqs  logic.lq  natural.lq  option.lq  path.lq  prelude.lq  prelude.lqs  process.lq  result.lq  shell.lq  (+4 more)
lib/diamond/: branch-a.lq  branch-b.lq  shared.lq
lib/examples/: webapp.lq
lib/http/: request.lq  response.lq  server.lq
lib/list/: eq.lq  traverse.lq
lib/net/: tcp.lq
lib/pair/: eq.lq
lib/shell/: lcat.lq  lecho.lq  lhttp.lq  lls.lq
lib/tools/: DefParser.lqs  MexprToSexpr.lq  MexprToSexpr.lqs  Tokenizer.lqs  Validator.lqs  count.lq  dependencies.lq  formatter.lq  formatter_indent.lq  tokenizer.lq  tokenizer.lqs  validator.lq  validator.lqs
lib/typeclass/: applicative.lq  arithmetic.lq  default.lq  display.lq  equality.lq  functor.lq  hash.lq  monad.lq  monoid.lq  order.lq  semigroup.lq
skills/locque/: SKILL.md
skills/locque-authoring/: SKILL.md
smyth/: Smythfile.lq
smyth/lib/: main.lq  smyth.lq
smyth/test/: main.lq  smyth.lq
test/: 00_basics.lq  00_basics.lqs  01_file_io.lq  01_file_io.lqs  02_lambda.lq  02_lambda.lqs  03_fold.lq  03_fold.lqs  04_match.lq  04_match.lqs  04_mexpr_to_sexpr.lq  04_mexpr_to_sexpr.lqs  05_let.lq  05_let.lqs  06_primitives.lq  07_import_lq.lq  08_arithmetic.lq  09_comparison.lq  10_new_primitives.lq  11_string_utils.lq  13_match_semantics.lq  40_small_bad_code.lqs  50_mexpr_to_sexpr.lq  50_mexpr_to_sexpr.lqs  51_roundtrip.lq  51_roundtrip.lqs  99_typecheck_fold_inline.lq  99_typecheck_match.lq  99_typecheck_mono.lq  99_typecheck_opaque_import.lq  99_typecheck_primitives.lq  99_typecheck_simple.lq  COVERAGE.md  README.md  SPECIFICATION.md  SUMMARY.md  arithmetic.lq  assert.lq  bench.lq  cli.lq  (+45 more)
test/arithmetic/: basics.lq  safe-div-mod.lq
test/bench/: formatter.lq  formatter_indent.lq  helpers.lq  string.lq  tokenizer.lq
test/cli/: basics.lq  structured.lq
test/comparison/: basics.lq
test/compile/: edge_cases.lq  hello.lq  sequence.lq
test/control/: basics.lq
test/diamond/: branch-a.lq  branch-b.lq  shared.lq
test/dictionary/: basics.lq  map-values.lq  map_values.lq
test/effects/: basics.lq
test/either/: basics.lq  with-context.lq
test/errors/: README.md  fuzzy_match_type.lq  fuzzy_match_unqualified.lq  validate_errors.sh
test/examples/: webapp.lq
test/features/: arithmetic.lq  basics.lq  comparison.lq  file_io.lq  fold.lq  imports.lq  lambda.lq  let_binding.lq  match.lq  match_semantics.lq  new_primitives.lq  primitives.lq  string_utils.lq
test/file/: basics.lq  file_io.lq  helpers.lq  io.lq  read-result.lq  stat.lq
test/fs/: basics.lq  helpers.lq  io.lq  stat.lq
test/http/: request.lq  response.lq  server.lq
test/io/: file_io.lq  print.lq
test/list/: basics.lq  eq.lq  nonempty.lq  traverse.lq
test/logic/: basics.lq  decidable.lq  lemmas.lq
test/natural/: basics.lq  refinements.lq
test/net/: tcp.lq
test/option/: basics.lq
test/pair/: eq.lq
test/path/: basics.lq  refinements.lq
test/prelude/: assertion_count.lq  basics.lq  computation_helpers.lq  data.lq  equality.lq  exists.lq  fold.lq  imports.lq  iota.lq  lambda.lq  let_binding.lq  lift.lq  match.lq  match_semantics.lq  new_primitives.lq  primitives.lq  recursor.lq  run_basic.lq
test/result/: basics.lq  with-context.lq
test/shell/: basic.lq  dump.lq  lcat.lq  lecho.lq  lhttp.lq  lls.lq  validate_error_messages.lq
test/signal/: basics.lq
test/smyth/: README.md  assertion_count.lq  run_basic.lq  shell_basic.lq  validate_error_messages.lq
test/string/: basic.lq  character.lq  lines.lq  nonempty.lq  url_decode.lq  utils.lq
test/syntax/: comments.lq  list_literals.lq
test/time/: basics.lq
test/tmp/: data.lqs
test/tools/: count.lq  dependencies.lq  formatter.lq  formatter_indent.lq  tokenizer.lq  validator.lq
test/type_aliases/: basics.lq
test/typecheck/: computation_type_mismatch.lq  down_requires_lifted.lq  effect_mismatch.lq  effects.lq  exists_pack_body_mismatch.lq  exists_pack_witness_mismatch.lq  exists_unpack_non_sigma.lq  fold_inline.lq  import_cycle_a.lq  import_cycle_b.lq  lift_invalid_direction.lq  lift_wrong_universe.lq  list_literal_hetero.lq  match.lq  match_duplicate_empty.lq  match_missing_cons.lq  match_missing_empty.lq  match_missing_false.lq  match_missing_pair.lq  match_missing_true.lq  match_unexpected_case.lq  mono.lq  opaque_import.lq  perform_bind_result_mismatch.lq  perform_non_computation.lq  primitives.lq  recursion_bare_recur.lq  recursion_in_compute.lq  recursion_no_struct_param.lq  (+11 more)
tools/: ci.sh
(+11 files in other folders)
