cabal-version:       3.0
name:                locque-compiler
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        ../LICENSE
author:              Justin
maintainer:          justin@example.com
category:            Language
synopsis:            Compiler core IR for locque

library
  hs-source-dirs:      src
  exposed-modules:     Locque.Compiler.Core,
                       Locque.Compiler.CoreErased,
                       Locque.Compiler.CorePretty,
                       Locque.Compiler.CoreParse,
                       Locque.Compiler.Erase,
                       Locque.Compiler.Convert,
                       LocqueRuntime
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns
  build-depends:
      base >=4.14 && <5,
      megaparsec >=9.3,
      text >=1.2

test-suite locque-compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns
  build-depends:
      base >=4.14 && <5,
      hspec >=2.9,
      QuickCheck >=2.14,
      megaparsec >=9.3,
      text >=1.2,
      locque-compiler
