cabal-version:       3.0
name:                locque-interpreter
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        ../LICENSE
author:              Justin
maintainer:          justin@example.com
category:            Language
synopsis:            Toy interpreter for locque

executable locque-interpreter
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       SourceLoc, ErrorMsg, AST, Eval, Parser, Validator, Type, TypeChecker, DictPass, Utils, ProjectChecks
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns
  build-depends:
      base >=4.14 && <5,
      megaparsec >=9.3,
      text >=1.2,
      containers >=0.6,
      filepath >=1.4,
      directory >=1.3,
      mtl >=2.2,
      array >=0.5,
      process >=1.6

executable smyth
  main-is:             Smyth.hs
  hs-source-dirs:      src
  other-modules:       SourceLoc, ErrorMsg, SmythTest, SmythRun, SmythConfig, AST, Eval, Parser, Validator, Type, TypeChecker, DictPass, Utils, ProjectChecks
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns
  build-depends:
      base >=4.14 && <5,
      megaparsec >=9.3,
      text >=1.2,
      containers >=0.6,
      filepath >=1.4,
      directory >=1.3,
      mtl >=2.2,
      array >=0.5,
      process >=1.6
