cabal-version:       3.0
name:                locque-interpreter
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        ../LICENSE
author:              Justin
maintainer:          justin@example.com
category:            Language
synopsis:            Toy interpreter for locque

executable locque-interpreter
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       SourceLoc, ErrorMsg, AST, Eval, Parser, Validator, Type, TypeChecker, DictPass, Utils
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns -threaded
  build-depends:
      base >=4.14 && <5,
      megaparsec >=9.3,
      text >=1.2,
      containers >=0.6,
      filepath >=1.4,
      directory >=1.3,
      time >=1.9,
      mtl >=2.2,
      array >=0.5,
      process >=1.6,
      unix >=2.7,
      network >=3.1,
      bytestring >=0.10,
      stm >=2.5

executable smyth
  main-is:             Smyth.hs
  hs-source-dirs:      src
  other-modules:       SourceLoc, ErrorMsg, SmythBench, SmythTest, SmythRun, SmythConfig, SmythCount, SmythDump, SmythFormat, AST, Eval, Parser, Validator, Type, TypeChecker, DictPass, Utils
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns -threaded
  build-depends:
      base >=4.14 && <5,
      megaparsec >=9.3,
      text >=1.2,
      containers >=0.6,
      filepath >=1.4,
      directory >=1.3,
      time >=1.9,
      mtl >=2.2,
      array >=0.5,
      process >=1.6,
      unix >=2.7,
      network >=3.1,
      bytestring >=0.10,
      stm >=2.5

executable locque-lsp
  main-is:             LocqueLsp.hs
  hs-source-dirs:      src
  other-modules:       SourceLoc, ErrorMsg, AST, Parser, Type, TypeChecker, Utils, SmythConfig
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns -threaded
  build-depends:
      base >=4.14 && <5,
      aeson >=2.0,
      array >=0.5,
      bytestring >=0.10,
      containers >=0.6,
      directory >=1.3,
      filepath >=1.4,
      megaparsec >=9.3,
      mtl >=2.2,
      text >=1.2
