cabal-version:       3.0
name:                locque-interpreter
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        ../LICENSE
author:              Justin
maintainer:          justin@example.com
category:            Language
synopsis:            Toy interpreter for locque

executable locque-interpreter
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       SourceLoc, ErrorMsg, AST, CtorArity, Eval, Parser, Recursor, Validator, Type, TypeChecker, DictPass, RunCache, Utils, ImportResolver, CompilerPipeline, CompilerLower, SmythConfig, StripTyped
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns -threaded
  build-depends:
      base >=4.14 && <5,
      megaparsec >=9.3,
      text >=1.2,
      containers >=0.6,
      filepath >=1.4,
      directory >=1.3,
      time >=1.9,
      mtl >=2.2,
      array >=0.5,
      process >=1.6,
      unix >=2.7,
      network >=3.1,
      bytestring >=0.10,
      stm >=2.5,
      locque-compiler

executable smyth
  main-is:             Smyth.hs
  hs-source-dirs:      src
  other-modules:       SourceLoc, ErrorMsg, SmythBench, SmythTest, SmythRun, SmythConfig, SmythCount, SmythDependencies, SmythDump, SmythFormat, SmythEmit, SmythCompile, SmythCompileTest, CompilerPipeline, CompilerLower, RunCache, AST, CtorArity, Eval, Parser, Recursor, Validator, Type, TypeChecker, DictPass, Utils, ImportResolver, StripTyped
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns -threaded
  build-depends:
      base >=4.14 && <5,
      megaparsec >=9.3,
      text >=1.2,
      containers >=0.6,
      filepath >=1.4,
      directory >=1.3,
      time >=1.9,
      mtl >=2.2,
      array >=0.5,
      process >=1.6,
      unix >=2.7,
      network >=3.1,
      bytestring >=0.10,
      stm >=2.5,
      locque-compiler

executable locque-compiler
  main-is:             LocqueCompiler.hs
  hs-source-dirs:      src
  other-modules:       SourceLoc, ErrorMsg, SmythCompile, SmythConfig, CompilerPipeline, CompilerLower, RunCache, AST, CtorArity, Eval, Parser, Recursor, Validator, Type, TypeChecker, DictPass, Utils, ImportResolver
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns -threaded
  build-depends:
      base >=4.14 && <5,
      megaparsec >=9.3,
      text >=1.2,
      containers >=0.6,
      filepath >=1.4,
      directory >=1.3,
      time >=1.9,
      mtl >=2.2,
      array >=0.5,
      process >=1.6,
      unix >=2.7,
      network >=3.1,
      bytestring >=0.10,
      stm >=2.5,
      locque-compiler

test-suite locque-compiler-golden
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             CompilerGolden.hs
  other-modules:       SourceLoc, ErrorMsg, AST, CtorArity, Eval, Parser, Recursor, Validator, Type, TypeChecker, DictPass, RunCache, Utils, SmythConfig, SmythRun, SmythCompile, CompilerPipeline, CompilerLower, ImportResolver
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns -threaded
  build-depends:
      base >=4.14 && <5,
      array >=0.5,
      bytestring >=0.10,
      containers >=0.6,
      directory >=1.3,
      filepath >=1.4,
      mtl >=2.2,
      megaparsec >=9.3,
      network >=3.1,
      process >=1.6,
      stm >=2.5,
      text >=1.2,
      time >=1.9,
      unix >=2.7,
      hspec >=2.9,
      locque-compiler

executable locque-lsp
  main-is:             LocqueLsp.hs
  hs-source-dirs:      src
  other-modules:       SourceLoc, ErrorMsg, AST, Parser, Recursor, Type, TypeChecker, Utils, SmythConfig, ImportResolver
  default-language:    GHC2021
  ghc-options:         -Wall -Wcompat -Wincomplete-patterns -threaded
  build-depends:
      base >=4.14 && <5,
      aeson >=2.0,
      array >=0.5,
      bytestring >=0.10,
      containers >=0.6,
      directory >=1.3,
      filepath >=1.4,
      megaparsec >=9.3,
      mtl >=2.2,
      text >=1.2
